# Eyou_Canopen_master

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package.xml  readme.md
.github/workflows/: ci.yml
config/: YiyouServo_V1.4.dcfgen.eds  YiyouServo_V1.4.eds  joints.yaml  joints_arm_only.yaml  joints_flipper_4axis.yaml  master.dcf  master.yaml  master_arm_only.dcf  master_arm_only.yaml  master_flipper_4axis.dcf  master_flipper_4axis.yaml
config/ros/: controllers.yaml  controllers_flipper_4axis.yaml
docs/: 0324import.md  2026-03-22_enable_protection_epoch_ready_bug_report_and_fix_plan.md  2026-03-24_state_management_refactor_commit_plan.md  2026-03-25_ip_follow_joint_trajectory_executor_commit_plan.md  2026-03-25_ip_follow_joint_trajectory_executor_design.md  2026-03-25_ip_follow_joint_trajectory_executor_implementation_report.md  2026-03-25_现行安全行为规范.md  README.md  api_reference.md  canopenplan.md  command_cheatsheet.md  debug_notes.md  pdo_sdo_design.md  project_overview.md  quality_9_score_plan.md  quality_review_2026-03-19.md  quality_upgrade_plan.md  release_readiness.md  review_report_and_fix_plan.md  roadmap_to_production.md  usage.md  yaml_config_guide.md  电机配置变更指南.md
docs/archive/: canopenplan.md  debug_notes.md  roadmap_to_production_2026-03-18.md  test_plan.md
docs/archive/2026-03-25_deprecated/: 2026-03-21_canopen_pdo_boot_diagnosis_report.md  2026-03-21_controller_manager_blocking_bug_report.md  2026-03-22_csp_is_operational_bug_report.md  2026-03-22_zero_position_jerk_bug_report.md  2026-03-23_ip_mode_support_commit_plan.md  2026-03-23_reboot_auto_enable_fix_plan.md  2026-03-24_state_management_refactor_commit_plan.md  2026-03-25_ip_follow_joint_trajectory_executor_commit_plan.md  2026-03-25_ip_follow_joint_trajectory_executor_implementation_report.md  README.md
include/canopen_hw/: axis_driver.hpp  axis_logic.hpp  canopen_aux_services.hpp  canopen_master.hpp  canopen_robot_hw.hpp  canopen_robot_hw_ros.hpp  cia402_defs.hpp  cia402_protocol.hpp  cia402_state_machine.hpp  dcf_path_utils.hpp  ip_follow_joint_trajectory_executor.hpp  joints_config.hpp  lifecycle_manager.hpp  operational_coordinator.hpp  pdo_mapping.hpp  sdo_accessor.hpp  service_gateway.hpp  shared_state.hpp  urdf_joint_limits.hpp  zero_soft_limit_executor.hpp
include/canopen_hw/controllers/: ip_follow_joint_trajectory_executor.hpp
launch/: bringup.launch  bringup_flipper_4axis.launch  canopen_hw.launch  canopen_hw_flipper_4axis.launch  flipper_only.launch
scripts/: generate_dcf.sh  joint_action_ui.py
src/: axis_driver.cpp  axis_logic.cpp  canopen_aux_services.cpp  canopen_hw_ros_node.cpp  canopen_master.cpp  canopen_robot_hw.cpp  canopen_robot_hw_ros.cpp  cia402_protocol.cpp  cia402_state_machine.cpp  dcf_path_utils.cpp  ip_follow_joint_trajectory_executor.cpp  joints_config.cpp  lifecycle_manager.cpp  main.cpp  operational_coordinator.cpp  pdo_mapping.cpp  realtime_loop.cpp  sdo_accessor.cpp  service_gateway.cpp  shared_state.cpp  urdf_joint_limits.cpp  zero_soft_limit_executor.cpp
src/controllers/: ip_follow_joint_trajectory_executor_ros.cpp  ip_follow_joint_trajectory_executor_runtime.cpp
srv/: SetZero.srv
test/: test_axis_logic.cpp  test_boundary_cases.cpp  test_canopen_master.cpp  test_canopen_robot_hw.cpp  test_canopen_robot_hw_ros.cpp  test_dcf_path_utils.cpp  test_ip_follow_joint_trajectory_executor.cpp  test_joints_config.cpp  test_lifecycle_manager.cpp  test_multi_mode.cpp  test_operational_coordinator.cpp  test_realtime_loop.cpp  test_shared_state.cpp  test_shared_state_concurrent.cpp  test_shared_state_gtest.cpp  test_startup_integration.cpp  test_state_machine.cpp  test_unit_conversion.cpp  test_urdf_joint_limits.cpp  test_zero_soft_limit_executor.cpp
urdf/: robot.urdf
